# codetango

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake/: CodeTangoConfig.cmake.in
codetango/: __init__.py  codetango.py
examples/: CMakeLists.txt  example.cpp  example.py
include/: codetango.h
src/: CMakeLists.txt  codetango.cpp
